--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -24,19 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "id": "111f8e73-519e-4282-a90d-cd96c5f166a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tommy/environments/a01/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "import os\n",
@@ -50,6 +41,7 @@
     "from psycopg2 import sql\n",
     "import numpy as np\n",
     "import umap\n",
+    "from sklearn.manifold import trustworthiness\n",
     "from sklearn.cluster import HDBSCAN\n",
     "from typing import Optional\n",
     "import requests\n",
@@ -755,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "id": "1691f252-bad4-4d37-a383-75c5a0e1a526",
    "metadata": {},
    "outputs": [],
@@ -768,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "id": "3a0e1ea4-d4d8-4c18-95fe-2b27ef1916bb",
    "metadata": {},
    "outputs": [],
@@ -799,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "id": "d310376b-cf60-4302-b4b4-443c99fa9c39",
    "metadata": {},
    "outputs": [
@@ -810,7 +802,7 @@
        "Name: sc.18_1_1_7, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "id": "6dcc72bb-cb30-4faf-8f3c-c991b6c508b7",
    "metadata": {},
    "outputs": [],
@@ -841,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "id": "d9d285e0-b8f2-4025-81e3-4a31de892984",
    "metadata": {},
    "outputs": [],
@@ -856,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "id": "9d2c6b40-b18c-46e8-8b3d-9faff904add3",
    "metadata": {},
    "outputs": [
@@ -877,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "id": "14acffe0-ca79-43b3-9fd2-74f78a64c8ed",
    "metadata": {},
    "outputs": [],
@@ -887,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "id": "7607a3a2-e68b-4af9-a2b0-7d9988446f15",
    "metadata": {},
    "outputs": [
@@ -897,14 +889,13 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 549 entries, sc.15_38_21_26 to sc.4_19_36_40\n",
-      "Data columns (total 3 columns):\n",
+      "Data columns (total 2 columns):\n",
       " #   Column              Non-Null Count  Dtype \n",
       "---  ------              --------------  ----- \n",
       " 0   embedding           549 non-null    object\n",
-      " 1   cluster             549 non-null    int64 \n",
-      " 2   reduced_embeddings  549 non-null    object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 33.3+ KB\n"
+      " 1   reduced_embeddings  549 non-null    object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 29.0+ KB\n"
      ]
     }
    ],
@@ -914,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "id": "f5438b0f-e2a7-4097-99a9-5180628793b0",
    "metadata": {},
    "outputs": [
@@ -940,7 +931,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>embedding</th>\n",
-       "      <th>cluster</th>\n",
        "      <th>reduced_embeddings</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -948,31 +938,26 @@
        "    <tr>\n",
        "      <th>sc.15_38_21_26</th>\n",
        "      <td>[-0.009832461675008139, 0.013961315155029297, ...</td>\n",
-       "      <td>0</td>\n",
        "      <td>[6.408513069152832, 7.243328094482422]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sc.89_38_22_22</th>\n",
        "      <td>[-0.0335693359375, 0.022918701171875, 0.046356...</td>\n",
-       "      <td>0</td>\n",
        "      <td>[5.989302158355713, 6.010448932647705]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sc.83_38_1_26</th>\n",
        "      <td>[-0.006933484758649554, 0.018914358956473216, ...</td>\n",
-       "      <td>0</td>\n",
        "      <td>[6.875131130218506, 6.406745910644531]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sc.95_38_21_24</th>\n",
        "      <td>[-0.00994873046875, 0.01206207275390625, 0.043...</td>\n",
-       "      <td>0</td>\n",
        "      <td>[6.283421039581299, 7.552778244018555]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sc.79_38_22_22</th>\n",
        "      <td>[-0.0151824951171875, 0.027618408203125, 0.064...</td>\n",
-       "      <td>0</td>\n",
        "      <td>[6.4714579582214355, 6.3549675941467285]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -980,12 +965,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                        embedding  cluster  \\\n",
-       "sc.15_38_21_26  [-0.009832461675008139, 0.013961315155029297, ...        0   \n",
-       "sc.89_38_22_22  [-0.0335693359375, 0.022918701171875, 0.046356...        0   \n",
-       "sc.83_38_1_26   [-0.006933484758649554, 0.018914358956473216, ...        0   \n",
-       "sc.95_38_21_24  [-0.00994873046875, 0.01206207275390625, 0.043...        0   \n",
-       "sc.79_38_22_22  [-0.0151824951171875, 0.027618408203125, 0.064...        0   \n",
+       "                                                        embedding  \\\n",
+       "sc.15_38_21_26  [-0.009832461675008139, 0.013961315155029297, ...   \n",
+       "sc.89_38_22_22  [-0.0335693359375, 0.022918701171875, 0.046356...   \n",
+       "sc.83_38_1_26   [-0.006933484758649554, 0.018914358956473216, ...   \n",
+       "sc.95_38_21_24  [-0.00994873046875, 0.01206207275390625, 0.043...   \n",
+       "sc.79_38_22_22  [-0.0151824951171875, 0.027618408203125, 0.064...   \n",
        "\n",
        "                                      reduced_embeddings  \n",
        "sc.15_38_21_26    [6.408513069152832, 7.243328094482422]  \n",
@@ -995,7 +980,7 @@
        "sc.79_38_22_22  [6.4714579582214355, 6.3549675941467285]  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +994,26 @@
    "id": "aed67a68-0e47-4b5f-af2d-1938ddd48726",
    "metadata": {},
    "source": [
-    "**TODO**: Evaluation of dimensionality reduction."
+    "**TODO**: Evaluation of dimensionality reduction. We are using trustworthiness here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "61284f33-64d2-4773-a7ca-816bf97976d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trustworthiness: 0.9432407772155053\n"
+     ]
+    }
+   ],
+   "source": [
+    "trust_score = trustworthiness(embeddings_orig, embeddings_reduced)\n",
+    "print(f\"Trustworthiness: {trust_score}\")"
    ]
   },
   {
