--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -24,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "111f8e73-519e-4282-a90d-cd96c5f166a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tommy/environments/a01/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "import os\n",
@@ -1376,83 +1385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "111b4e0f-c8ec-4ad8-b896-8a692cea4992",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory created: clustering/subcluster/0\n",
-      "http://localhost:8080/api/download/tafsir/83/c.83_37/sc.83_37_114_182\n",
-      "http://localhost:8080/api/download/tafsir/22/c.22_37/sc.22_37_1_82\n",
-      "http://localhost:8080/api/download/tafsir/75/c.75_37/sc.75_37_1_23\n",
-      "http://localhost:8080/api/download/tafsir/15/c.15_37/sc.15_37_11_26\n",
-      "http://localhost:8080/api/download/tafsir/6/c.6_37/sc.6_37_11_23\n",
-      "http://localhost:8080/api/download/tafsir/17/c.17_37/sc.17_37_1_28\n",
-      "http://localhost:8080/api/download/tafsir/68/c.68_37/sc.68_37_11_26\n",
-      "http://localhost:8080/api/download/tafsir/90/c.90_37/sc.90_37_1_34\n",
-      "http://localhost:8080/api/download/tafsir/94/c.94_37/sc.94_37_11_26\n",
-      "Directory created: clustering/subcluster/1\n",
-      "http://localhost:8080/api/download/tafsir/54/c.54_37/sc.54_37_22_26\n",
-      "http://localhost:8080/api/download/tafsir/104/c.104_37/sc.104_37_22_50\n",
-      "http://localhost:8080/api/download/tafsir/95/c.95_37/sc.95_37_22_33\n",
-      "http://localhost:8080/api/download/tafsir/96/c.96_37/sc.96_37_19_28\n",
-      "http://localhost:8080/api/download/tafsir/19/c.19_37/sc.19_37_22_39\n",
-      "http://localhost:8080/api/download/tafsir/11/c.11_37/sc.11_37_19_40\n",
-      "http://localhost:8080/api/download/tafsir/56/c.56_37/sc.56_37_12_70\n",
-      "http://localhost:8080/api/download/tafsir/9/c.9_37/sc.9_37_20_49\n",
-      "http://localhost:8080/api/download/tafsir/37/c.37_37/sc.37_37_22_34\n",
-      "http://localhost:8080/api/download/tafsir/3/c.3_37/sc.3_37_21_30\n",
-      "http://localhost:8080/api/download/tafsir/83/c.83_37/sc.83_37_1_61\n",
-      "http://localhost:8080/api/download/tafsir/28/c.28_37/sc.28_37_23_28\n",
-      "http://localhost:8080/api/download/tafsir/57/c.57_37/sc.57_37_22_39\n",
-      "http://localhost:8080/api/download/tafsir/47/c.47_37/sc.47_37_11_32\n",
-      "http://localhost:8080/api/download/tafsir/36/c.36_37/sc.36_37_21_23\n",
-      "http://localhost:8080/api/download/tafsir/41/c.41_37/sc.41_37_17_37\n",
-      "Directory created: clustering/subcluster/3\n",
-      "http://localhost:8080/api/download/tafsir/48/c.48_37/sc.48_37_15_23\n",
-      "http://localhost:8080/api/download/tafsir/60/c.60_37/sc.60_37_18_29\n",
-      "http://localhost:8080/api/download/tafsir/91/c.91_37/sc.91_37_22_26\n",
-      "http://localhost:8080/api/download/tafsir/97/c.97_37/sc.97_37_13_24\n",
-      "http://localhost:8080/api/download/tafsir/26/c.26_37/sc.26_37_22_23\n",
-      "http://localhost:8080/api/download/tafsir/24/c.24_37/sc.24_37_19_26\n",
-      "http://localhost:8080/api/download/tafsir/13/c.13_37/sc.13_37_16_24\n",
-      "http://localhost:8080/api/download/tafsir/31/c.31_37/sc.31_37_22_27\n",
-      "http://localhost:8080/api/download/tafsir/76/c.76_37/sc.76_37_22_24\n",
-      "http://localhost:8080/api/download/tafsir/18/c.18_37/sc.18_37_20_26\n",
-      "http://localhost:8080/api/download/tafsir/84/c.84_37/sc.84_37_20_26\n",
-      "Directory created: clustering/subcluster/-1\n",
-      "http://localhost:8080/api/download/tafsir/67/c.67_37/sc.67_37_21_30\n",
-      "http://localhost:8080/api/download/tafsir/12/c.12_37/sc.12_37_20_26\n",
-      "http://localhost:8080/api/download/tafsir/92/c.92_37/sc.92_37_13_44\n",
-      "http://localhost:8080/api/download/tafsir/98/c.98_37/sc.98_37_22_26\n",
-      "http://localhost:8080/api/download/tafsir/10/c.10_37/sc.10_37_22_45\n",
-      "http://localhost:8080/api/download/tafsir/5/c.5_37/sc.5_37_22_35\n",
-      "http://localhost:8080/api/download/tafsir/7/c.7_37/sc.7_37_20_26\n",
-      "http://localhost:8080/api/download/tafsir/14/c.14_37/sc.14_37_19_26\n",
-      "http://localhost:8080/api/download/tafsir/39/c.39_37/sc.39_37_21_30\n",
-      "http://localhost:8080/api/download/tafsir/66/c.66_37/sc.66_37_22_30\n",
-      "http://localhost:8080/api/download/tafsir/42/c.42_37/sc.42_37_22_23\n",
-      "http://localhost:8080/api/download/tafsir/90/c.90_15/sc.90_15_26_87\n",
-      "http://localhost:8080/api/download/tafsir/15/c.15_15/sc.15_15_30_41\n",
-      "Directory created: clustering/subcluster/2\n",
-      "http://localhost:8080/api/download/tafsir/52/c.52_37/sc.52_37_23_23\n",
-      "http://localhost:8080/api/download/tafsir/1/c.1_37/sc.1_37_22_23\n",
-      "http://localhost:8080/api/download/tafsir/65/c.65_37/sc.65_37_21_30\n",
-      "http://localhost:8080/api/download/tafsir/2/c.2_37/sc.2_37_22_26\n",
-      "http://localhost:8080/api/download/tafsir/49/c.49_37/sc.49_37_22_23\n",
-      "http://localhost:8080/api/download/tafsir/50/c.50_37/sc.50_37_22_23\n",
-      "http://localhost:8080/api/download/tafsir/4/c.4_37/sc.4_37_22_26\n",
-      "http://localhost:8080/api/download/tafsir/55/c.55_37/sc.55_37_22_23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Saving files\n",
-    "for i in df_cp.subcluster.unique():\n",
-    "   download_cluster_subchapters(df_cp[df_cp[\"subcluster\"]==i].index.tolist(), f\"clustering/subcluster/{i}\")"
+    "#for i in df_cp.subcluster.unique():\n",
+    " #  download_cluster_subchapters(df_cp[df_cp[\"subcluster\"]==i].index.tolist(), f\"clustering/subcluster/{i}\")"
    ]
   },
   {
@@ -1482,22 +1422,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "296d1a04-9ee2-43c9-ac43-069cad371850",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save metadata for all clusters\n",
-    "for i in df_cp.subcluster.unique():\n",
-    "    data = dict()\n",
-    "    for idx, sc in enumerate(df_cp[df_cp[\"subcluster\"]==i].index.tolist()):\n",
-    "        json_res, err = get_subchapter_metadata(sc)\n",
-    "        # Adding sc id to JSON data\n",
-    "        json_res[\"sc_id\"] = sc\n",
-    "        data[idx] = json_res\n",
-    "    df_metadata = pd.DataFrame.from_dict(data, orient=\"index\")\n",
-    "    df_metadata = df_metadata.map(lambda x: \"; \".join(x) if type(x) == list else x)\n",
-    "    df_metadata.to_csv(f\"tables/subcluster_{i}.csv\")"
+    "#for i in df_cp.subcluster.unique():\n",
+    " #   data = dict()\n",
+    "  #  for idx, sc in enumerate(df_cp[df_cp[\"subcluster\"]==i].index.tolist()):\n",
+    "   #     json_res, err = get_subchapter_metadata(sc)\n",
+    "    #    # Adding sc id to JSON data\n",
+    "     #   json_res[\"sc_id\"] = sc\n",
+    "      #  data[idx] = json_res\n",
+    "    #df_metadata = pd.DataFrame.from_dict(data, orient=\"index\")\n",
+    "    #df_metadata = df_metadata.map(lambda x: \"; \".join(x) if type(x) == list else x)\n",
+    "    #df_metadata.to_csv(f\"tables/subcluster_{i}.csv\")"
    ]
   },
   {
