--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -5,7 +5,8 @@
    "id": "c302e9d3-d327-4534-954e-5b6c7e431ae4",
    "metadata": {},
    "source": [
-    "# EDA"
+    "# EDA\n",
+    "Version: 02.04.2025"
    ]
   },
   {
@@ -104,7 +105,7 @@
    "id": "bb3266be-52ea-4bd7-8d75-6e98f076de76",
    "metadata": {},
    "source": [
-    "## Avg. tokens per school of law"
+    "# Avg. tokens per school of law"
    ]
   },
   {
@@ -173,9 +174,397 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4656f057-bb54-4df4-860a-8d02848e524a",
+   "metadata": {},
+   "source": [
+    "# Avg. quotes per author"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "746cca1f-273e-42a6-b27f-323fe2e64c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading data\n",
+    "df = pd.read_csv(\"stats/quote_distribution.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fd19fbb3-a420-4fdf-8580-571c8f432086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 230 entries, 0 to 229\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   tafsir_id           230 non-null    int64  \n",
+      " 1   type                230 non-null    object \n",
+      " 2   author_name         230 non-null    object \n",
+      " 3   school_of_theology  230 non-null    object \n",
+      " 4   quote_count         230 non-null    int64  \n",
+      " 5   token_count         230 non-null    int64  \n",
+      " 6   quote_per_1k_token  230 non-null    float64\n",
+      "dtypes: float64(1), int64(3), object(3)\n",
+      "memory usage: 12.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e12b53e5-8e11-4563-b1c0-c4662d9cdf87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tafsir_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>author_name</th>\n",
+       "      <th>school_of_theology</th>\n",
+       "      <th>quote_count</th>\n",
+       "      <th>token_count</th>\n",
+       "      <th>quote_per_1k_token</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Quran</td>\n",
+       "      <td>Ǧalāl ad-Dīn ʿAbd ar-Raḥmān Ibn Abī Bakr as-Su...</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "      <td>50216</td>\n",
+       "      <td>186564</td>\n",
+       "      <td>269.162325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Quran</td>\n",
+       "      <td>Muḥammad ibn Yaʿqūb al-Fīrūzābādī</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "      <td>29855</td>\n",
+       "      <td>219007</td>\n",
+       "      <td>136.319844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Quran</td>\n",
+       "      <td>Abū 'l-Ḥasan ʿAlī ibn Aḥmad al-Wāḥidī</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "      <td>16852</td>\n",
+       "      <td>168095</td>\n",
+       "      <td>100.252833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Quran</td>\n",
+       "      <td>ʿAbd ar-Razzāq Kamāl ad-Dīn ibn Abī al-Ġanāʾim...</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "      <td>18494</td>\n",
+       "      <td>208712</td>\n",
+       "      <td>88.610142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Quran</td>\n",
+       "      <td>ʿAbd al-Qādir ibn Abū Ṣālīḥ al-Ǧīlānī</td>\n",
+       "      <td>Tasawwuf</td>\n",
+       "      <td>40736</td>\n",
+       "      <td>477252</td>\n",
+       "      <td>85.355326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tafsir_id   type                                        author_name  \\\n",
+       "0          8  Quran  Ǧalāl ad-Dīn ʿAbd ar-Raḥmān Ibn Abī Bakr as-Su...   \n",
+       "1         10  Quran                  Muḥammad ibn Yaʿqūb al-Fīrūzābādī   \n",
+       "2         60  Quran          Abū 'l-Ḥasan ʿAlī ibn Aḥmad al-Wāḥidī   \n",
+       "3         33  Quran  ʿAbd ar-Razzāq Kamāl ad-Dīn ibn Abī al-Ġanāʾim...   \n",
+       "4         95  Quran              ʿAbd al-Qādir ibn Abū Ṣālīḥ al-Ǧīlānī   \n",
+       "\n",
+       "  school_of_theology  quote_count  token_count  quote_per_1k_token  \n",
+       "0   Sunni, undefined        50216       186564          269.162325  \n",
+       "1   Sunni, undefined        29855       219007          136.319844  \n",
+       "2   Sunni, undefined        16852       168095          100.252833  \n",
+       "3   Sunni, undefined        18494       208712           88.610142  \n",
+       "4           Tasawwuf        40736       477252           85.355326  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "340a2772-cc6a-43f4-b42e-e08ef0721397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Overall abs. quote count (sum of quran + hadith + poetry)\n",
+    "df_abs_quotes = df.groupby(\"author_name\")[\"quote_count\"].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f353a9bf-78cf-4b92-8589-6e2dc3f85e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the abs token count from the original dataframe\n",
+    "df_abs_quotes[\"token_count\"] = df_abs_quotes[\"author_name\"].map(lambda x: df[df[\"author_name\"] == x][\"token_count\"].iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "23cdcfe0-93fd-405d-843e-7d6eea428b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the school of theology from the original dataframe\n",
+    "df_abs_quotes[\"school_of_theology\"] = df_abs_quotes[\"author_name\"].map(lambda x: df[df[\"author_name\"] == x][\"school_of_theology\"].iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "81e5cd80-631e-401f-b035-7b51ba9b330f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating the rel. number of quotes per 1000 tokens\n",
+    "df_abs_quotes[\"rel_quotes_per_1k_tokens\"] = (df_abs_quotes[\"quote_count\"] / df_abs_quotes[\"token_count\"]) * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bedde2e4-9f7b-473f-a3e0-2d5fb2015400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author_name</th>\n",
+       "      <th>quote_count</th>\n",
+       "      <th>token_count</th>\n",
+       "      <th>rel_quotes_per_1k_tokens</th>\n",
+       "      <th>school_of_theology</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Ǧalāl ad-Dīn ʿAbd ar-Raḥmān Ibn Abī Bakr as-Su...</td>\n",
+       "      <td>90194</td>\n",
+       "      <td>186564</td>\n",
+       "      <td>483.448039</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Muḥammad ibn Yaʿqūb al-Fīrūzābādī</td>\n",
+       "      <td>29860</td>\n",
+       "      <td>219007</td>\n",
+       "      <td>136.342674</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abū 'l-Ḥasan ʿAlī ibn Aḥmad al-Wāḥidī</td>\n",
+       "      <td>16870</td>\n",
+       "      <td>168095</td>\n",
+       "      <td>100.359916</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Aṯīr ad-Dīn Abū Ḥayyān Muḥammad ibn Yūsuf ibn...</td>\n",
+       "      <td>51369</td>\n",
+       "      <td>514169</td>\n",
+       "      <td>99.906840</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Muḥammad ʿAlī aṣ-Ṣābūnī</td>\n",
+       "      <td>53366</td>\n",
+       "      <td>553166</td>\n",
+       "      <td>96.473753</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Ibrāhīm al-Qaṭṭān</td>\n",
+       "      <td>4896</td>\n",
+       "      <td>385548</td>\n",
+       "      <td>12.698808</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Aḥmad ibn Ḥamad al-Ḫalīlī</td>\n",
+       "      <td>2576</td>\n",
+       "      <td>244890</td>\n",
+       "      <td>10.519009</td>\n",
+       "      <td>Ibadi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Ṣadr ad-Dīn Muḥammad aš-Šīrāzī</td>\n",
+       "      <td>5911</td>\n",
+       "      <td>601338</td>\n",
+       "      <td>9.829746</td>\n",
+       "      <td>Twelver Shiʿa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Muḥammad Rašīd Riḍā</td>\n",
+       "      <td>17762</td>\n",
+       "      <td>1876028</td>\n",
+       "      <td>9.467876</td>\n",
+       "      <td>Ashʿariyya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Laǧnat al-Qurʾān wa-s-Sunna fī Maǧlis al-Aʿlā ...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>180844</td>\n",
+       "      <td>0.022119</td>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>75 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          author_name  quote_count  \\\n",
+       "59  Ǧalāl ad-Dīn ʿAbd ar-Raḥmān Ibn Abī Bakr as-Su...        90194   \n",
+       "38                  Muḥammad ibn Yaʿqūb al-Fīrūzābādī        29860   \n",
+       "0           Abū 'l-Ḥasan ʿAlī ibn Aḥmad al-Wāḥidī        16870   \n",
+       "11  Aṯīr ad-Dīn Abū Ḥayyān Muḥammad ibn Yūsuf ibn...        51369   \n",
+       "45                            Muḥammad ʿAlī aṣ-Ṣābūnī        53366   \n",
+       "..                                                ...          ...   \n",
+       "21                                  Ibrāhīm al-Qaṭṭān         4896   \n",
+       "16                         Aḥmad ibn Ḥamad al-Ḫalīlī         2576   \n",
+       "53                    Ṣadr ad-Dīn Muḥammad aš-Šīrāzī         5911   \n",
+       "31                                Muḥammad Rašīd Riḍā        17762   \n",
+       "24  Laǧnat al-Qurʾān wa-s-Sunna fī Maǧlis al-Aʿlā ...            4   \n",
+       "\n",
+       "    token_count  rel_quotes_per_1k_tokens school_of_theology  \n",
+       "59       186564                483.448039   Sunni, undefined  \n",
+       "38       219007                136.342674   Sunni, undefined  \n",
+       "0        168095                100.359916   Sunni, undefined  \n",
+       "11       514169                 99.906840   Sunni, undefined  \n",
+       "45       553166                 96.473753   Sunni, undefined  \n",
+       "..          ...                       ...                ...  \n",
+       "21       385548                 12.698808   Sunni, undefined  \n",
+       "16       244890                 10.519009              Ibadi  \n",
+       "53       601338                  9.829746      Twelver Shiʿa  \n",
+       "31      1876028                  9.467876         Ashʿariyya  \n",
+       "24       180844                  0.022119   Sunni, undefined  \n",
+       "\n",
+       "[75 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sanity check\n",
+    "df_abs_quotes.sort_values(\"rel_quotes_per_1k_tokens\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5ff35b06-66d3-403a-9486-4060f5ee8a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_abs_quotes.sort_values(\"rel_quotes_per_1k_tokens\", ascending=False).to_csv(\"stats/abs_quote_distribution.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec53667-b1dc-4b1d-8911-16f8d4c40dc3",
+   "id": "0efc8b52-55ef-4201-9c8c-bc675ee343af",
    "metadata": {},
    "outputs": [],
    "source": []
