--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f4d5782a-159f-4781-b49c-0f43bf8232c9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
    "id": "5d251974-329f-4c94-a48f-898f94f312c9",
    "metadata": {},
    "source": [
-    "# Avg. token count per surah"
+    "# Avg. token count per sura"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "a5742663-3dc4-47f2-826f-5ee84d7d8205",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "47c9b5b1-1dbd-46d0-9d06-8baa4389384d",
    "metadata": {},
    "outputs": [
@@ -171,6 +171,115 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"images/avg_tokens_sot.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98ad3d5f-20a4-4d71-b578-a63c63dfaf09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>avg_token_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shiʿa, undefined</td>\n",
+       "      <td>2.869452e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Athariyya</td>\n",
+       "      <td>2.236359e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maturidiyya</td>\n",
+       "      <td>1.167141e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ibadi</td>\n",
+       "      <td>9.750465e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Twelver Shiʿa</td>\n",
+       "      <td>9.223427e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ashʿariyya</td>\n",
+       "      <td>8.724479e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tasawwuf</td>\n",
+       "      <td>7.719052e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sunni, undefined</td>\n",
+       "      <td>7.488084e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Muʿtazila</td>\n",
+       "      <td>5.589885e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Zaydiyya</td>\n",
+       "      <td>1.186173e+05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              label  avg_token_count\n",
+       "0  Shiʿa, undefined     2.869452e+06\n",
+       "1         Athariyya     2.236359e+06\n",
+       "2       Maturidiyya     1.167141e+06\n",
+       "3             Ibadi     9.750465e+05\n",
+       "4     Twelver Shiʿa     9.223427e+05\n",
+       "5        Ashʿariyya     8.724479e+05\n",
+       "6          Tasawwuf     7.719052e+05\n",
+       "7  Sunni, undefined     7.488084e+05\n",
+       "8         Muʿtazila     5.589885e+05\n",
+       "9          Zaydiyya     1.186173e+05"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
